--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,24 +2,25 @@ name: whos_that_pokemon
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=3.1.3 <4.0.0'
+environment:
+  sdk: ">=3.1.3 <4.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.6
   dio: 5.3.4
   flutter_svg: 2.0.9
-  flutter: 
+  number_paginator: 0.4.0
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
-  assets: 
+flutter:
+  assets:
     - assets/images/
+    - assets/icons/
   uses-material-design: true
-
